--- a/src/Components/Home/Home.css
+++ b/src/Components/Home/Home.css
@@ -58,7 +58,7 @@
 }
 .upcomming-card{
     border: 1px solid silver;
-    padding: 20px;
+    padding: 5px;
     text-align: left;
     margin: 3px;
 }
@@ -86,4 +86,9 @@
 }
 .upcomming-heading{
     text-align: center;
+}
+
+body{
+ overflow-x:hidden;
+ margin:10px
 }
